--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@date-io/dayjs": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
     "@date-io/moment": "^2.13.1",
+    "@devexpress/dx-react-core": "^3.0.0",
+    "@devexpress/dx-react-scheduler": "^3.0.0",
+    "@devexpress/dx-react-scheduler-material-ui": "^3.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -19,6 +22,8 @@
     "@fullcalendar/moment": "^5.10.1",
     "@fullcalendar/moment-timezone": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/resource-timegrid": "^5.10.1",
+    "@fullcalendar/resource-timeline": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@iconify/icons-mdi": "^1.1.47",
     "@iconify/react": "^3.1.3",
@@ -38,6 +43,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-spring": "^9.4.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
