--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.17",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -49,10 +50,11 @@
     "redux-thunk": "^2.4.1",
     "sequelize": "^6.16.1",
     "styled-components": "^5.3.3",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set api_token='pk.eyJ1IjoidG9wdGFsZW50IiwiYSI6ImNrenBqdW9mdjYxOW0yeHBycnNzYzEybjgifQ.fh70WgDAw5DUhXUnzhU99Q' && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
